# Lution

./: .gitignore  LICENSE  README.md  compile.sh
.githooks/: pre-commit
.github/workflows/: build-appimage.yml  build-appimageNuitka.yml
src/: meson.build  run.sh  runwithoutqt.sh
src/Lution/: launch.py  main.py  meson.build  org.wookhq.Lution.gresource.xml  requirements.txt  testgtk.py  window.py
src/Lution/.streamlit/: config.toml
src/Lution/files/languages/: en.json  ger.json  lolcat.json  premiumenglish.json  tram.json  vn.json
src/Lution/files/languagues/: en.json
src/Lution/markdown/: about.md  whatsnew.md copy.example
src/Lution/modules/basic/: messages.py  mics.py
src/Lution/modules/configcheck/: VERSION.py  config.py  fontreplacer.py
src/Lution/modules/json/: json.py
src/Lution/modules/marketplace/: downloadandinstall.py
src/Lution/modules/muti_instance/: SoberManager.py
src/Lution/modules/utils/: files.py  lang.py  logging.py  messages.py  sidebar.py
src/Lution/pages/: about.py  appearance.py  apply.py  fflags.py  fflagsoptima.py  lutionsettings.py  marketplace.py  mods.py  muti_instance.py
src/data/: org.wookhq.Lution.desktop
src/data/boostraper/languages/: ger.json
src/data/ui/: page_fflags.ui  window.ui
src/sostrapter/: app.py  main.py
src/sostrapter/files/languagues/: en.json  vn.json
src/sostrapter/markdown/: about.md
src/sostrapter/modules/basic/: messages.py
src/sostrapter/modules/configcheck/: config.py
src/sostrapter/modules/json/: json.py
src/test/: noexit.py
